<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/surface_bg"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AVATAR CIRCULAR NARANJA -->
    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/bg_avatar_circle_orange"
        android:src="@drawable/ic_person_white_24"
        android:scaleType="centerInside"
        android:contentDescription="@string/title_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- EMAIL (solo línea, hint naranja) -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundMode="none"
        app:hintTextColor="@color/orange_600">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/orange_600"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- PASSWORD (solo línea + toggle, hint naranja) -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tilLoginEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundMode="none"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/orange_600">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/orange_600"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- LOGIN -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_login"
        android:textAllCaps="true"
        android:textColor="@color/onPrimary"
        android:background="@drawable/bg_button_rounded"
        android:elevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/tilLoginPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- REGISTER -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoRegisterFromLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_go_register"
        android:textAllCaps="true"
        android:textColor="@color/onPrimary"
        android:background="@drawable/bg_button_rounded"
        android:elevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
